Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/8016640/T8016640.out
T8016640.java:9:39: compiler.err.wrong.number.type.args: 2
1 error
